# txtdata

./: README.md  asd.py  pyproject.toml
tests/: test_txtdata.py
txtdata/: __init__.py
